--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/projects.html
@@ -116,7 +116,7 @@
             background-color: #ffffff;
             color: #000000;
         }
-        .project-card {
+        .project-card-horizontal {
             display: flex;
             flex-direction: row;
             align-items: center;
@@ -189,7 +189,7 @@
             </div>
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-11 col-xl-9 col-xxl-8">
-                    <div class="project-card">
+                    <div class="project-card-horizontal">
                         <div class="project-text">
                             <a href="arte-naturaleza.html">
                                 <h2 class="fw-bolder">Del surrealismo a la crisis ecológica: Arte y naturaleza en diálogo</h2>
@@ -201,7 +201,7 @@
                         </div>
                     </div>
 
-                    <div class="project-card">
+                    <div class="project-card-horizontal">
                         <div class="project-text">
                             <a href="poder-mentira.html">
                                 <h2 class="fw-bolder">La política del engaño</h2>
@@ -213,7 +213,7 @@
                         </div>
                     </div>
 
-                    <div class="project-card">
+                    <div class="project-card-horizontal">
                         <div class="project-text">
                             <a href="salomon.html">
                                 <h2 class="fw-bolder">La abnegación más pura: la maternidad</h2>
