--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -339,7 +339,7 @@
  var swiper = new Swiper('.mySwiper', {
   slidesPerView: 3,
   centeredSlides: true,
-  spaceBetween: -10,
+  spaceBetween: 2, !important
   loop: true,
   initialSlide: 1,
   navigation: {
