--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -221,34 +221,8 @@
                     </div>
                 </div>
             </div>
-        </header>
 
-        <!-- About section-->
-        <section class="bg-light py-5">
-            <div class="container px-5">
-                <div class="row gx-5 justify-content-center">
-                    <div class="col-xxl-8">
-                        <div class="text-center my-5">
-                            <h2 class="display-5 fw-bolder">
-                                <span class="text-gradient d-inline">Sobre mí</span>
-                            </h2>
-                            <p class="lead fw-light mb-4">
-                                Mi nombre es Rick Grisales, soy periodista y creativo.
-                            </p>
-                            <p class="text-muted">
-                                Me apasiona el poder de las palabras para conectar, inspirar y transformar. Como periodista, busco historias que importen; como creativo, exploro formas de contarlas que dejen huella...
-                            </p>
-                            <div class="d-flex justify-content-center fs-2 gap-4">
-                                <a class="text-gradient" href="https://www.instagram.com/oranrick"><i class="bi bi-instagram"></i></a>
-                                <a class="text-gradient" href="https://www.linkedin.com/in/ricardo-grisales-ramirez-49a322232/"><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <!-- Sección de Proyectos destacados con Swiper -->
+            <!-- Sección de Proyectos destacados con Swiper -->
         <section class="py-5 bg-light">
   <div class="container">
     <div class="text-center mb-5" data-aos="fade-up">
@@ -331,6 +305,41 @@
     </div>
   </div>
 </section>
+        </header>
+
+        <!-- About section-->
+        <section class="bg-light py-5">
+            <div class="container px-5">
+                <div class="row gx-5 justify-content-center">
+                    <div class="col-xxl-8">
+                        <div class="text-center my-5">
+                            <h2 class="display-5 fw-bolder">
+                                <span class="text-gradient d-inline">Sobre mí</span>
+                            </h2>
+                            <p class="lead fw-light mb-4">
+                                Mi nombre es Rick Grisales, soy periodista y creativo.
+                            </p>
+                            <p class="text-muted">
+                                Me apasiona el poder de las palabras para conectar, inspirar y transformar. Como periodista, busco historias que importen; como creativo, exploro formas de contarlas que dejen huella...
+                            </p>
+                            <div class="d-flex justify-content-center fs-2 gap-4">
+                                <a class="text-gradient" href="https://www.instagram.com/oranrick"><i class="bi bi-instagram"></i></a>
+                                <a class="text-gradient" href="https://www.linkedin.com/in/ricardo-grisales-ramirez-49a322232/"><i class="bi bi-linkedin"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Sección de Proyectos destacados con Swiper -->
+        <section class="py-5 bg-light">
+  <div class="container">
+    <div class="text-center mb-5" data-aos="fade-up">
+      <h2 class="display-5 fw-bolder">
+        <span class="text-gradient d-inline">Mis proyectos</span>
+      </h2>
+    </div>
 
 <!-- Swiper JS (asegúrate de que esté antes de tu script de configuración) -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
