--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -223,7 +223,7 @@
             </div>
 
             <!-- Sección de Proyectos destacados con Swiper -->
-        <section class="py-5 bg-light">
+        <section class="py-5">
   <div class="container">
     <div class="text-center mb-5" data-aos="fade-up">
       <h2 class="display-5 fw-bolder">
@@ -332,15 +332,6 @@
             </div>
         </section>
 
-        <!-- Sección de Proyectos destacados con Swiper -->
-        <section class="py-5 bg-light">
-  <div class="container">
-    <div class="text-center mb-5" data-aos="fade-up">
-      <h2 class="display-5 fw-bolder">
-        <span class="text-gradient d-inline">Mis proyectos</span>
-      </h2>
-    </div>
-
 <!-- Swiper JS (asegúrate de que esté antes de tu script de configuración) -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
@@ -410,8 +401,6 @@
   });
 }
 </script>
-
-    </main>
 
     <!-- Footer-->
     <footer class="py-4 mt-auto">
