botón projects.html

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -305,7 +305,16 @@
     </div>
   </div>
 </section>
+
+    <!-- Coloca este HTML justo después del contenedor del carrusel -->
+<div class="ver-todos-container">
+  <a href="projects.html" class="ver-todos-link">
+    Ver todos mis proyectos <i class="fas fa-arrow-right"></i>
+  </a>
+</div>
+            
         </header>
+
 
         <!-- About section-->
         <section class="bg-light py-5">
