--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -345,7 +345,7 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <script>
- const swiper = new Swiper('.mySwiper', {
+  var swiper = new Swiper('.mySwiper', {
   slidesPerView: 'auto',
   spaceBetween: 10,
   centeredSlides: true,
