--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -345,27 +345,16 @@
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
 <script>
-  var swiper = new Swiper('.mySwiper', {
+ var swiper = new Swiper('.mySwiper', {
   slidesPerView: 'auto',
   spaceBetween: 10,
   centeredSlides: true,
   loop: true,
-  breakpoints: {
-    // cuando la ventana es >= 320px
-    320: {
-      slidesPerView: 1,
-      spaceBetween: 10
-    },
-    // cuando la ventana es >= 480px
-    480: {
-      slidesPerView: 1,
-      spaceBetween: 20
-    },
-    // cuando la ventana es >= 768px
-    768: {
-      slidesPerView: 2.5,
-      spaceBetween: 15
-    }
+  breakpoints: { ... },        // tus opciones de tamaño
+  on: {
+    init: function() { updateSlidesScale(this); },
+    slideChange: function() { updateSlidesScale(this); },
+    resize: function() { updateSlidesScale(this); }
   }
 });
   on: {
