--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -347,24 +347,28 @@
 <script>
   var swiper = new Swiper('.mySwiper', {
   slidesPerView: 'auto',
-  spaceBetween: 10,
+  spaceBetween: 5,
   centeredSlides: true,
   loop: true,
+  navigation: {
+    nextEl: '.swiper-button-next',
+    prevEl: '.swiper-button-prev'
+  },
   breakpoints: {
     // cuando la ventana es >= 320px
     320: {
       slidesPerView: 1,
-      spaceBetween: 10
+      spaceBetween: 5
     },
     // cuando la ventana es >= 480px
     480: {
       slidesPerView: 1,
-      spaceBetween: 20
+      spaceBetween: 10
     },
     // cuando la ventana es >= 768px
     768: {
       slidesPerView: 2.5,
-      spaceBetween: 15
+      spaceBetween: 10
     }
   },
   on: {
