--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -194,7 +194,7 @@
                                 Hola, soy <strong>Rick</strong>. Periodista, creativo y amante del lenguaje
                             </div>
                             <h1 class="display-3 fw-bolder mb-5">
-                            <span class="text-gradient d-inline">Creo puentes con palabras</span>
+                            <span class="text-gradient d-inline">Creo puentes con <span id="rotating-word">palabras</span></span>
                             <span class="cursor-blink">|</span>
                             </h1>
 
