--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -151,6 +151,11 @@
       animation: blink 1s step-start infinite;
     }
 
+    #rotating-word {
+      text-shadow: 0 0 8px rgba(255, 255, 255, 0.7);
+      filter: brightness(1.1);
+    }
+
     @keyframes blink {
       50% {
         opacity: 0;
@@ -194,8 +199,7 @@
                                 Hola, soy <strong>Rick</strong>. Periodista, creativo y amante del lenguaje
                             </div>
                             <h1 class="display-3 fw-bolder mb-5">
-                            <span class="text-gradient d-inline">Creo puentes con <span id="rotating-word">palabras</span></span>
-                            <span class="cursor-blink">|</span>
+                            <span class="text-gradient d-inline">Creo puentes con <span id="rotating-word">palabras</span></span><span class="cursor-blink">|</span>
                             </h1>
 
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
