--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -222,7 +222,7 @@
                 </div>
             </div>
 
-            <!-- Sección de Proyectos destacados con Swiper -->
+            <!-- Sección de Proyectos destacados -->
         <section class="py-5">
   <div class="container">
     <div class="text-center mb-5" data-aos="fade-up">
@@ -231,29 +231,23 @@
       </h2>
     </div>
 
-    <!-- Carrusel Swiper -->
-    <div class="swiper mySwiper">
-      <div class="swiper-wrapper">
-        
-        <!-- Slide 1 -->
-        <div class="swiper-slide">
+    <!-- Carrusel de proyectos -->
+    <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
           <div class="project-card">
             <div class="project-image">
               <img src="assets/trump.jpg" alt="La política del engaño">
             </div>
             <div class="project-content">
               <h5 class="project-title fw-bold">La política del engaño</h5>
-              <!-- Etiqueta de género: texto naranja, negrita -->
               <span class="genre-label mb-2">Reportaje - Opinión</span>
               <p class="project-text">La desinformación como estrategia emocional en la política moderna.</p>
-              <!-- Botón "Leer más" (naranja menos chillón) -->
               <a href="poder-mentira.html" class="btn btn-leermas fw-bold">Leer más</a>
             </div>
           </div>
         </div>
-
-        <!-- Slide 2 -->
-        <div class="swiper-slide">
+        <div class="carousel-item">
           <div class="project-card">
             <div class="project-image">
               <img src="assets/portadaarte.jpg" alt="Arte y naturaleza">
@@ -266,9 +260,7 @@
             </div>
           </div>
         </div>
-
-        <!-- Slide 3 -->
-        <div class="swiper-slide">
+        <div class="carousel-item">
           <div class="project-card">
             <div class="project-image">
               <img src="assets/portada-salo.jpg" alt="La maternidad en el arte">
@@ -281,9 +273,7 @@
             </div>
           </div>
         </div>
-
-        <!-- Slide 4 -->
-        <div class="swiper-slide">
+        <div class="carousel-item">
           <div class="project-card">
             <div class="project-image">
               <img src="assets/maribursa.png" alt="Mariposa bursátil">
@@ -296,12 +286,15 @@
             </div>
           </div>
         </div>
-
       </div>
-
-      <!-- Flechas -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#projectsCarousel" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#projectsCarousel" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
   </div>
 
@@ -341,55 +334,6 @@
             </div>
         </section>
 
-<!-- Swiper JS (asegúrate de que esté antes de tu script de configuración) -->
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
-<script>
- var swiper = new Swiper('.mySwiper', {
-  slidesPerView: 'auto',
-  spaceBetween: 10,
-  centeredSlides: true,
-  loop: true,
-  breakpoints: { ... },        // tus opciones de tamaño
-  on: {
-    init: function() { updateSlidesScale(this); },
-    slideChange: function() { updateSlidesScale(this); },
-    resize: function() { updateSlidesScale(this); }
-  }
-});
-
-  // Escalado progresivo para los slides (solo en desktop)
-  function updateSlidesScale(swiper) {
-  const slides = swiper.slides;
-  const activeIndex = swiper.activeIndex;
-  const isMobile = window.innerWidth < 768;
-
-  slides.forEach(function(slide, index) {
-    if (isMobile) {
-      // En móvil, todo igual (sin escalado ni opacidad)
-      slide.style.transform = "scale(1)";
-      slide.style.opacity = "1";
-      slide.style.zIndex = "1";
-      slide.style.width = "90vw"; // Asegura que coincida con el CSS
-      slide.style.maxWidth = "90vw"; // Asegura que coincida con el CSS
-    } else {
-      // En escritorio, escalado progresivo
-      let distance = Math.min(
-        Math.abs(index - activeIndex),
-        Math.abs(index - activeIndex - slides.length),
-        Math.abs(index - activeIndex + slides.length)
-      );
-      let scale = 1 - (distance * 0.1); // Cambiado de 0.15 a 0.1
-      scale = Math.max(scale, 0.7); // Cambiado de 0.5 a 0.7 para que los laterales sean más grandes
-      let opacity = 1 - (distance * 0.2);
-      opacity = Math.max(opacity, 0.4);
-      slide.style.transform = `scale(${scale})`;
-      slide.style.opacity = opacity;
-      slide.style.zIndex = 10 - distance;
-    }
-  });
-}
-</script>
 
     <!-- Footer-->
     <footer class="py-4 mt-auto">
