Add dynamic word cycling

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -194,8 +194,7 @@
                                 Hola, soy <strong>Rick</strong>. Periodista, creativo y amante del lenguaje
                             </div>
                             <h1 class="display-3 fw-bolder mb-5">
-                            <span class="text-gradient d-inline">Creo puentes con palabras</span>
-                            <span class="cursor-blink">|</span>
+                                <span class="text-gradient d-inline">Creo puentes con <span id="changing-word">palabras</span></span><span class="cursor-blink">|</span>
                             </h1>
 
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
@@ -303,6 +302,8 @@
     </button>
     <!-- Dark mode script -->
     <script src="js/dark-mode.js"></script>
+    <!-- Word cycling script -->
+    <script src="js/word-cycle.js"></script>
 
 </body>
 </html>
