Add responsive project preview

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -221,24 +221,46 @@
                 </div>
             </div>
 
-            <!-- Sección de Proyectos destacados -->
-        <section class="py-5">
-  <div class="container">
-    <div class="text-center mb-5" data-aos="fade-up">
-      <h2 class="display-5 fw-bolder">
-        <span class="text-gradient d-inline">Mis proyectos</span>
-      </h2>
-    </div>
+        <!-- Sección de Proyectos destacados -->
+        <section class="project-preview-section py-5">
+            <div class="container">
+                <div class="text-center mb-5" data-aos="fade-up">
+                    <h2 class="display-5 fw-bolder">
+                        <span class="text-gradient d-inline">Mis proyectos</span>
+                    </h2>
+                </div>
 
-  </div>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="assets/portadaarte.jpg" alt="Arte y naturaleza" />
+                        <div class="overlay">
+                            <h3 class="fw-bolder">Arte y naturaleza</h3>
+                            <p class="mb-0">Del surrealismo a la crisis ecológica</p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="assets/trump.jpg" alt="La política del engaño" />
+                        <div class="overlay">
+                            <h3 class="fw-bolder">La política del engaño</h3>
+                            <p class="mb-0">La desinformación como arma</p>
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="assets/portada-salo.jpg" alt="La maternidad" />
+                        <div class="overlay">
+                            <h3 class="fw-bolder">La maternidad</h3>
+                            <p class="mb-0">El juicio de Salomón</p>
+                        </div>
+                    </div>
+                </div>
 
-    <div class="ver-todos-container">
-  <a href="projects.html" class="ver-todos-link">
-    Ver todos mis proyectos <i class="fas fa-arrow-right"></i>
-  </a>
-</div>
-            
-</section>
+                <div class="ver-todos-container mt-4">
+                    <a href="projects.html" class="ver-todos-link">
+                        Ver todos mis proyectos <i class="fas fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
             
         </header>
 
