--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -208,14 +208,28 @@
     .project-card-preview:hover .overlay {
       opacity: 1;
     }
-    .project-card-preview h3 {
-      color: #fff;
-      font-size: 1.25rem;
-      margin-bottom: 0.5rem;
-    }
-    .project-card-preview p {
+    .overlay p {
       color: #ccc;
       font-size: 0.9rem;
+      margin: 0;
+    }
+    .image-wrapper {
+      position: relative;
+    }
+    .project-info {
+      text-align: center;
+      padding: 1rem;
+      background: #000;
+    }
+    .project-title {
+      color: #fff;
+      font-size: 1.25rem;
+      margin-bottom: 0.25rem;
+    }
+    .project-subtitle {
+      color: #ccc;
+      font-size: 0.9rem;
+      margin: 0;
     }
     </style>
 </head>
@@ -293,24 +307,39 @@
 
                 <div class="project-grid">
                     <a href="arte-naturaleza.html" class="project-card-preview">
-                        <img src="assets/portadaarte.jpg" alt="Arte y naturaleza" />
-                        <div class="overlay">
-                            <h3>Arte y naturaleza</h3>
-                            <p>Del surrealismo a la crisis ecológica</p>
+                        <div class="image-wrapper">
+                            <img src="assets/portadaarte.jpg" alt="Arte y naturaleza" />
+                            <div class="overlay">
+                                <p>Madrid se convierte en un oasis de vitalismo con la exposición “Arte y naturaleza. Un siglo de biomorfismo”…</p>
+                            </div>
+                        </div>
+                        <div class="project-info">
+                            <h3 class="project-title">Arte y naturaleza</h3>
+                            <p class="project-subtitle">Del surrealismo a la crisis ecológica</p>
                         </div>
                     </a>
                     <a href="poder-mentira.html" class="project-card-preview">
-                        <img src="assets/trump.jpg" alt="La política del engaño" />
-                        <div class="overlay">
-                            <h3>La política del engaño</h3>
-                            <p>¿Puede sobrevivir la democracia a la desinformación?</p>
+                        <div class="image-wrapper">
+                            <img src="assets/trump.jpg" alt="La política del engaño" />
+                            <div class="overlay">
+                                <p>¿Puede sobrevivir la democracia cuando la desinformación se convierte en una experiencia emocional más poderosa que la verdad?</p>
+                            </div>
+                        </div>
+                        <div class="project-info">
+                            <h3 class="project-title">La política del engaño</h3>
+                            <p class="project-subtitle">La mentira como herramienta de poder</p>
                         </div>
                     </a>
                     <a href="salomon.html" class="project-card-preview">
-                        <img src="assets/portada-salo.jpg" alt="La abnegación más pura" />
-                        <div class="overlay">
-                            <h3>La abnegación más pura</h3>
-                            <p>Un recorrido por la maternidad en el arte</p>
+                        <div class="image-wrapper">
+                            <img src="assets/portada-salo.jpg" alt="La abnegación más pura" />
+                            <div class="overlay">
+                                <p>Es difícil recorrer los pasillos del Thyssen sin detenerse a ver esta dramática escena...</p>
+                            </div>
+                        </div>
+                        <div class="project-info">
+                            <h3 class="project-title">La abnegación más pura</h3>
+                            <p class="project-subtitle">Un recorrido por la maternidad en el arte</p>
                         </div>
                     </a>
                 </div>
