--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -159,7 +159,7 @@
 
     /* ===== Adelanto de proyectos ===== */
     .project-preview-section {
-      background-color: #000;
+      background-color: var(--bg-color);
     }
     .project-grid {
       display: grid;
@@ -209,26 +209,27 @@
       opacity: 1;
     }
     .overlay p {
-      color: #ccc;
+      color: var(--muted-text-color);
       font-size: 0.9rem;
       margin: 0;
     }
     .image-wrapper {
       position: relative;
+      height: 220px;
     }
     .project-info {
       text-align: center;
       padding: 1rem;
-      background: #000;
+      background: var(--bg-color);
     }
     .project-title {
-      color: #fff;
-      font-size: 1.25rem;
+      color: #ff8a00;
+      font-size: 1.35rem;
       margin-bottom: 0.25rem;
     }
     .project-subtitle {
-      color: #ccc;
-      font-size: 0.9rem;
+      color: var(--text-color);
+      font-size: 1rem;
       margin: 0;
     }
     </style>
