Fix project section background

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -159,7 +159,7 @@
 
     /* ===== Adelanto de proyectos ===== */
     .project-preview-section {
-      background-color: var(--bg-color);
+      background-color: #000;
     }
     .project-grid {
       display: grid;
@@ -220,7 +220,7 @@
     .project-info {
       text-align: center;
       padding: 1rem;
-      background: var(--bg-color);
+      background: #000;
     }
     .project-title {
       color: #ff8a00;
