Refine project card overlay and link styles

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -181,6 +181,8 @@
       overflow: hidden;
       border-radius: 1.5rem;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+      text-decoration: none;
+      color: inherit;
     }
     .project-card-preview img {
       width: 100%;
@@ -196,6 +198,7 @@
       position: absolute;
       inset: 0;
       background-color: rgba(0, 0, 0, 0.6);
+      border-radius: inherit;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -209,7 +212,7 @@
       opacity: 1;
     }
     .overlay p {
-      color: var(--muted-text-color);
+      color: #ffffff;
       font-size: 0.9rem;
       margin: 0;
     }
