Restore orange gradient for header phrase

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -295,7 +295,7 @@
                                 Hola, soy <strong>Rick</strong>. Periodista, creativo y amante del lenguaje
                             </div>
                             <h1 class="display-3 fw-bolder mb-5">
-                                Creo puentes con <span id="changing-word" class="gradient-gray">palabras</span><span class="cursor-blink">|</span>
+                                <span class="text-gradient d-inline">Creo puentes con</span> <span id="changing-word" class="gradient-gray">palabras</span><span class="cursor-blink">|</span>
                             </h1>
 
                             <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
