--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -257,6 +257,32 @@
       font-size: 1rem;
       margin: 0;
     }
+
+    /* Tamaño reducido del retrato en el hero */
+    .profile {
+      width: 300px;
+      height: 300px;
+      max-width: 100%;
+      border-radius: 50%;
+      margin-top: 0;
+      overflow: hidden;
+    }
+    .profile-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 50%;
+      position: absolute;
+      bottom: 0;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    @media (max-width: 767.98px) {
+      .profile {
+        width: 180px;
+        height: 180px;
+      }
+    }
     </style>
 </head>
 <body class="d-flex flex-column h-100">
@@ -285,7 +311,7 @@
         <header class="py-5">
             <div class="container px-5 pb-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-xxl-5">
+                    <div class="col-xxl-6">
                         <!-- Header text content-->
                         <div class="text-center text-xxl-start">
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
@@ -304,7 +330,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xxl-7">
+                    <div class="col-xxl-6">
                         <!-- Header profile picture-->
                         <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                             <div class="profile bg-gradient-primary-to-secondary">
