--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -244,8 +244,8 @@
         <!-- Header-->
         <header class="py-5">
             <div class="container px-5 pb-5">
-                <div class="row gx-5 align-items-center">
-                    <div class="col-xxl-5 order-2 order-lg-1">
+                <div class="hero-grid">
+                    <div class="hero-copy">
                         <!-- Header text content-->
                         <div class="text-center text-xxl-start">
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
@@ -264,11 +264,11 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-xxl-7 order-1 order-lg-2">
+                    <div class="hero-photo">
                         <!-- Header profile picture-->
                         <div class="d-flex justify-content-center mt-5 mt-xxl-0">
-                            <div class="profile bg-gradient-primary-to-secondary">
-                                <img class="profile-img" src="assets/indexpic.png" alt="Retrato de Rick Grisales" loading="lazy" />
+                            <div class="profile bg-gradient-hero">
+                                <img class="profile-img" src="assets/indexpic.png" width="260" height="260" alt="Retrato de Rick Grisales" loading="eager" decoding="async" />
                                 <!-- SVG decoraciones (dots) -->
                                 <div class="dots-1">
                                     <!-- Contenido SVG omitido para ahorrar espacio -->
