--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -244,7 +244,7 @@
         <!-- Header-->
         <header class="py-5">
             <div class="container px-5 pb-5">
-                <div class="hero-grid">
+                <div class="hero-flex">
                     <div class="hero-copy">
                         <!-- Header text content-->
                         <div class="text-center text-xxl-start">
