Revert profile image sizing

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -268,7 +268,7 @@
                         <!-- Header profile picture-->
                         <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                             <div class="profile bg-gradient-hero">
-                                <img class="profile-img" src="assets/indexpic.png" width="260" height="260" alt="Retrato de Rick Grisales" loading="eager" decoding="async" />
+                                <img class="profile-img" src="assets/indexpic.png" alt="Retrato de Rick Grisales" loading="eager" decoding="async" />
                                 <!-- SVG decoraciones (dots) -->
                                 <div class="dots-1">
                                     <!-- Contenido SVG omitido para ahorrar espacio -->
