--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/salomon.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/salomon.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="">
+<html lang="es" data-theme="dark">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -21,16 +21,10 @@
     <style>
         /* VARIABLES DE COLOR */
         :root {
-            --bg-color: #ffffff;  /* Fondo claro */
-            --text-color: #000000; /* Texto oscuro */
-            --caption-color: #555; /* Color de los pies de página en modo claro */
-            --nav-link-color: #000000; /* Color de los enlaces del menú en modo claro */
-        }
-        [data-theme="dark"] {
-            --bg-color: #121212;   /* Fondo oscuro */
-            --text-color: #ffffff; /* Texto claro */
-            --caption-color: #bbb; /* Color de los pies de página en modo oscuro */
-            --nav-link-color: #ffa94d; /* Color de los enlaces del menú en modo oscuro (naranja) */
+            --bg-color: #121212;
+            --text-color: #ffffff;
+            --caption-color: #bbb;
+            --nav-link-color: #ffa94d;
         }
 
         /* RESET DE FONDOS FIJOS */
@@ -47,32 +41,7 @@
         }
 
         /* Estilo del botón de cambio de tema */
-        .theme-toggle {
-            position: fixed;
-            top: 1.5rem;
-            right: 1.5rem;
-            background: rgba(255, 255, 255, 0.1); /* Fondo sutil para mejor visibilidad */
-            border: none; /* Eliminamos el borde circular */
-            border-radius: 8px; /* Bordes ligeramente redondeados */
-            width: 36px;
-            height: 36px;
-            font-size: 1.2rem;
-            color: var(--text-color);
-            cursor: pointer;
-            z-index: 999;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        @media (max-width: 767px) {
-            .theme-toggle {
-                top: 4rem; /* Bajamos el botón en pantallas pequeñas para evitar solapamiento con el menú */
-                right: 1rem;
-                width: 32px;
-                height: 32px;
-                font-size: 1rem;
-            }
-        }
+
 
         /* Ajustes para el menú desplegable */
         .navbar-collapse {
@@ -268,52 +237,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- SCRIPT PARA MODO OSCURO -->
-<script>
-    // 1. Detecta si el sistema del usuario prefiere modo oscuro
-    const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-    // 2. Revisa si el usuario ya eligió un tema en 'localStorage'
-    const userTheme = localStorage.getItem('theme');
 
-    if (userTheme) {
-        // Si el usuario guardó 'dark' o 'light', lo aplicamos
-        document.documentElement.setAttribute('data-theme', userTheme);
-    } else if (prefersDark) {
-        // Si no hay preferencia guardada, pero el sistema es oscuro
-        document.documentElement.setAttribute('data-theme', 'dark');
-    }
-
-    // Alternar el tema (cuando se hace click en el botón)
-    function toggleTheme() {
-        const currentTheme = document.documentElement.getAttribute('data-theme');
-        const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-        document.documentElement.setAttribute('data-theme', newTheme);
-        localStorage.setItem('theme', newTheme);
-        updateIcon(newTheme);
-    }
-
-    // Actualizar el iconito según el tema
-    function updateIcon(theme) {
-        const icon = document.getElementById('theme-icon');
-        if (!icon) return;
-        icon.textContent = theme === 'dark' ? '☀️' : '🌙';
-    }
-
-    // Espera a que cargue el DOM para asociar el evento de click
-    document.addEventListener('DOMContentLoaded', () => {
-        const button = document.getElementById('theme-toggle');
-        if (button) {
-            button.addEventListener('click', toggleTheme);
-            // Sincroniza el icono actual
-            const current = document.documentElement.getAttribute('data-theme') || 'light';
-            updateIcon(current);
-        }
-    });
-</script>
-
-<!-- BOTÓN DE TEMA (arriba a la derecha) -->
-<button id="theme-toggle" class="theme-toggle" aria-label="Cambiar tema">
-    <span id="theme-icon">🌙</span>
-</button>
 
 </body>
 </html>
