Translate about narrative

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/resume.html
@@ -165,16 +165,16 @@
                     <!-- About Me Section -->
                     <section id="about-narrative" class="my-5">
                         <div class="about-block" data-aos="fade-up">
-                            <h3 class="about-title">What taught me to see differently</h3>
-                            <p>I was born in Spain but grew up in Colombia. I was raised between two languages, two ways of naming the same thing, and I quickly learned that there’s never just one way of understanding the world. That’s where my fascination with language began: with how it builds, and how it can either wound or embrace.</p>
+                            <h3 class="about-title">Lo que me hizo mirar distinto</h3>
+                            <p>Nací en España, pero crecí en Colombia. Crecí entre dos lenguajes, dos formas de nombrar lo mismo, y aprendí pronto que no existe una única manera de entender el mundo. Ahí nació mi fascinación por el lenguaje: por cómo construye, por cómo puede herir o abrazar.</p>
                         </div>
                         <div class="about-block" data-aos="fade-up">
-                            <h3 class="about-title">Writing was never a choice</h3>
-                            <p>I don’t remember when I started writing — but I do remember why I kept going: to avoid falling silent in the face of what hurt, to invent meaning where there was none. Over time, I realized writing could also be a way to think, to question, to transform. A way to translate the unspoken — not with answers, but with better questions.</p>
+                            <h3 class="about-title">Escribir no fue una decisión</h3>
+                            <p>No recuerdo cuándo empecé a escribir, pero sí recuerdo por qué seguí haciéndolo: para no quedarme mudo ante lo que me dolía, para inventar sentido cuando faltaba. Con el tiempo, descubrí que escribir también podía ser un modo de pensar, de cuestionar, de transformar. Una forma de traducir lo inefable —no con respuestas, sino con preguntas mejores.</p>
                         </div>
                         <div class="about-block" data-aos="fade-up">
-                            <h3 class="about-title">It all begins with a question</h3>
-                            <p>Every project I take on begins there: with a question that won’t stay quiet. Whether it’s academic, journalistic, or creative, I want my work to be in conversation with reality — but also to unsettle it a little. And deep down, I want it to resemble who I am: curious, critical, sensitive. And fully convinced that language can — and should — be a tool for empathy.</p>
+                            <h3 class="about-title">Todo parte de una pregunta</h3>
+                            <p>Cada proyecto que emprendo nace de eso: una duda que no se calla. Ya sea académico, periodístico o creativo, busco que lo que hago dialogue con lo real, pero también lo desestabilice un poco. Y en el fondo, que se parezca a mí: curioso, crítico, sensible. Y profundamente convencido de que el lenguaje puede —y debe— ser una herramienta para la empatía.</p>
                         </div>
                     </section>
                     <!-- Experience Section-->
