Refine about section and cleanup

--- a/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
+++ b/startbootstrap-personal-gh-pages/startbootstrap-personal-gh-pages/index.html
@@ -188,6 +188,13 @@
       border-left: 2px solid #444;
       margin-bottom: 2rem;
     }
+    .about-block h3 {
+      font-size: 1.75rem;
+      color: var(--nav-link-color);
+    }
+    .about-block p {
+      line-height: 1.7;
+    }
     .about-block:last-child {
       margin-bottom: 0;
     }
@@ -356,8 +363,6 @@
     <script>
         AOS.init();
     </script>
-    <!-- Word cycling script -->
-    <script src="js/word-cycle.js"></script>
     <!-- Word cycling script -->
     <script src="js/word-cycle.js"></script>
 
